# tulip

./: README.md
core/: README.md  config.json  generate_proto.sh  go.mod  go.sum  q  test  test.db
core/cmd/api/: main.go
core/cmd/broker/: main.go
core/cmd/discovery/: main.go
core/cmd/gateway/: main.go
core/cmd/pki/: main.go
core/cmd/probe/: main.go
core/internal/api/: entities.go  history.go
core/internal/api/responses/: action.go  entity.go  state.go
core/internal/ca/: ca.go
core/internal/controller/: action.go  command.go
core/internal/controller/light/: light.go
core/internal/controller/utils/: publish.go  state.go
core/internal/database/: database.go
core/internal/discovery/: mqtt.go  protocol.go  server.go  transaction.go
core/internal/gateway/: handler.go  message.go  server.go
core/pkg/api/: api.pb.go  api.proto  api_grpc.pb.go
core/pkg/discovery/: discovery.pb.go  discovery.proto  discovery_grpc.pb.go
core/pkg/gateway/: gateway.pb.go  gateway.proto  gateway_grpc.pb.go
core/pkg/models/: card.go  device.go  entity.go
core/pkg/mqttModels/: config.go  device.go
core/pkg/pki/: pki.pb.go  pki.proto  pki_grpc.pb.go
core/pkg/wind/: protocol.go  server.go  transaction.go
ui/: CMakeLists.txt  README.md
ui/Applications/: CMakeLists.txt
ui/Applications/Journey/: .gitignore  pubspec.yaml
ui/Applications/Journey/lib/: app.dart  main.dart
ui/Applications/Journey/lib/cards/light/bloc/: light_event.dart  light_state.dart
ui/Applications/Journey/lib/cards/light/view/: component.dart
ui/Applications/Journey/lib/components/: card.dart
ui/Applications/Journey/lib/core/models/: command.dart  entity.dart  light.dart  state.dart
ui/Applications/Journey/lib/entities/bloc/: entities_bloc.dart  entities_event.dart  entities_state.dart
ui/Applications/Journey/lib/entities/models/: entity.dart
ui/Applications/Journey/lib/entities/view/: entities.dart
ui/Applications/Journey/lib/entity/bloc/: entity_state_bloc.dart  entity_state_event.dart  entity_state_state.dart
ui/Applications/Journey/lib/entity/view/: component.dart
ui/Applications/Journey/lib/models/: command.dart  entity.dart  light.dart
ui/Applications/Journey/lib/repositories/: entity.dart
ui/Applications/Journey/linux/: my_application.cc
ui/Controller/: CMakeLists.txt  arena.c  arena.h  event.c  event.h  main.c  packet.c  packet.h  server.c  server.h  types.h
ui/Glass/: CMakeLists.txt  damage.h  glass.h  input.c  input.h  main.c  output.c  output.h  util.h  view.c  view.h
ui/Protocols/: CMakeLists.txt  presentation-time-client.h  presentation-time-protocol.h  presentation-time.c  wlr-layer-shell-unstable-v1-client.h  wlr-layer-shell-unstable-v1-protocol.c  wlr-layer-shell-unstable-v1-protocol.h  xdg-shell-client.h  xdg-shell-protocol.h
ui/Utils/: CMakeLists.txt  globals.cc
ui/Utils/Globals/: main.c  meson.build
